# nlp

./: .gitignore  .project  EmailDecryptRESTService.md  KafkaListen.py  KafkaPublish.py  NamedEntity.py  PartOfSpeech.py  ReadJSON.py  Train.py  active_document.py  barctnc.txt  entity_type.py  file_response.py  imanage_document.py  imanage_email.py  imanage_folder.py  imanage_library.py  imanage_object.py  imanage_session.py  imanage_test.py  imanage_workspace.py  input.txt  language_processor.py  main.py  named_entity.py  object_type.py  orig_test.docx  parser.json  part_of_speech.py  pdf_document.py  read_json.py  read_wiki.py  rest.py  sentiment.py  span.py  startKafka.sh  test.docx  test.py  text_compare.py  text_response.py  (+3 more)
angular_app/: README.md  angular.json  package-lock.json  package.json
angular_app/src/: index.html
angular_app/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  category.ts  clause.ts  named-entity.ts  prediction.ts  span.ts  text-response.ts
data/: languages.json  patterns.json
html_root/: index.html
matchers/: index.json  person.json  pnoun.json
package/: README.md  setup.cfg
package/src/impy/: imanage_document.py  imanage_folder.py  imanage_object.py  imanage_session.py  object_type.py
resources/css/: gauge.css  site.css
resources/js/: documentClassifyApp.js  site.js  tabs.js
templates/: chart-tab.html  clauses-tab.html  comparison-tab.html  dialog.html  document-tab.html  gaugetest.html  home.html  index.html  properties-tab.html  upload-comparison-tab.html
tika-server/: pom.xml
(+25 files in other folders)
