[metadata]
name = impy
version = 1.0.0
author = Mark Smith
author_email = hbdesiato@protonmail.com
description = A basic iManage python interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smith404/nlp
project_urls =
    Bug Tracker = https://github.com/smith404/nlp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src